<resources>
    <string name="app_name">SocialApp PDM21/22</string>
    <string name="send_message">Send</string>
    <string name="search_devices_text">Search Devices</string>
    <string name="bluetooth_enabled_text">Bluetooth Enabled</string>
    <string name="bluetooth_unenabled_text">Bluetooth Not Enabled</string>
    <string name="available_devices">Available Devices</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="already_signed_up_log_in">Already Signed Up? Log In!</string>
    <string name="email">Email</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="title_activity_time_line">TimeLineActivity</string>
    <string name="action_settings">Settings</string>
    <string name="attempts_remaining">Attempts Remaining</string>
    <string name="not_registered_sign_up">Not Registered? Sign In!</string>
    <string name="create_a_new_post">Create a New Post</string>
    <string name="open_chat">Open Chat</string>
    <string name="main_page">Página Inicial</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender_ns">Other</string>
    <string name="gender_m">M</string>
    <string name="gender_f">F</string>
    <string name="gender">Gender</string>
    <string name="upload_text">Upload</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="create_profile">Create Profile</string>
    <string name="back">Back</string>
    <string name="longText">This is a long text
    with multiple lines to test if this works
    with long texts like this </string>
    <string name="search_for_posts">Search for New Posts</string>
    <string name="logo">Logo</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="scanning">Scanning for Devices...</string>
    <string name="reply">Reply</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="style_mode">Dark Mode</string>
    <string name="style_header">Appearance</string>
    <string name="personal_header">Profile Settings</string>
    <string name="change_email_option">Please write your email</string>
    <string name="change_pass_option">Reset password</string>
    <string name="mode_summary">Turn Dark Mode On/Off</string>
    <string name="mode_key_string" />
    <string name="reset_password_email">Send Reset Email</string>
    <string name="new_password">Please write your new Password</string>
    <string name="not_connected">Not Connected</string>
</resources>