<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    app:title="Settings">
    <PreferenceCategory app:title="@string/personal_header">


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/style_header">

        <SwitchPreferenceCompat
            app:key="mode"
            app:summary="@string/mode_summary"
            app:title="@string/style_mode" />


    </PreferenceCategory>

    <PreferenceCategory app:title="Timeline">

        <CheckBoxPreference
            app:key="timeline"
            app:summary="Delete all posts everytime the app is closed"
            app:title="Clear Timeline" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Experience">

        <ListPreference
            app:key="break"
            app:summary="Remind me to take a break"
            android:entries="@array/break_names_array"
            android:entryValues="@array/break_values_array"
            app:title="Break time" />

        <Preference
            app:key="report"
            app:title="Send feedback"
            app:summary="Report technical issues or suggest new features"/>

    </PreferenceCategory>

</PreferenceScreen>