<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".CreateProfileActivity">


    <TextView
        android:id="@id/create_profile_title"
        android:layout_width="317dp"
        android:layout_height="74dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/create_profile"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_profile_title"
        app:layout_constraintVertical_bias="0.283"
        tools:layout_editor_absoluteX="9dp"
        android:layout_margin="10dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/change_username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/birthdate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/birthdate"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.082"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_profile_title" />

                <RadioGroup
                    android:id="@+id/radioGender"
                    android:layout_width="353dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="30dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gender_text">

                    <RadioButton
                        android:id="@+id/genderNS"
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:layout_marginRight="20dp"
                        android:checked="true"
                        android:text="@string/gender_ns"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <RadioButton
                        android:id="@+id/genderM"
                        android:layout_width="60dp"
                        android:layout_height="45dp"
                        android:layout_marginEnd="28dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/gender_m"
                        app:layout_constraintEnd_toStartOf="@+id/radioButton4"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent" />

                    <RadioButton
                        android:id="@+id/genderF"
                        android:layout_width="60dp"
                        android:layout_height="42dp"
                        android:text="@string/gender_f" />

                </RadioGroup>

                <TextView
                    android:id="@+id/gender_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:layout_marginTop="15dp"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:spinnersShown="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/birthdate_text" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="55dp"
        android:layout_height="53dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989"
        app:rippleColor="@color/white"
        app:srcCompat="@android:drawable/ic_dialog_dialer" />

    <Button
        android:id="@+id/upload_data"
        android:layout_width="87dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/upload_text"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="87dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/back"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/upload_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>